--- a/work/upbound_claim.yaml
+++ b/work/upbound_claim.yaml
@@ -6,6 +6,19 @@ spec:
   databaseName: catalog
   storageGB: 20
   secret: ack-creds
+  databaseName:
+  storageGB:
+  secret:
+  subnetIds:
+  region:
+  vpcId:
+  port:
+  cidrBlocks:
+  engineType:
+  engineVersion:
+  instanceClass:
+  passwordSecret:
+  connectionInfoSecret:
   resourceConfig:
     providerConfigName: default
 
