--- a/work/upbound_aurora_comp.yaml
+++ b/work/upbound_aurora_comp.yaml
@@ -77,10 +77,10 @@ spec:
           patchSetName: common-fields
         - fromFieldPath: "spec.region"
           toFieldPath: "spec.forProvider.region"
-        - fromFieldPath: "spec.fromPort"
-          toFieldPath: "spec.forProvider.port"
-        - fromFieldPath: "spec.toPort"
-          toFieldPath: "spec.forProvider.port"
+        - fromFieldPath: "spec.port"
+          toFieldPath: "spec.forProvider.fromPort"
+        - fromFieldPath: "spec.port"
+          toFieldPath: "spec.forProvider.toPort"
         - fromFieldPath: "spec.cidrBlocks"
           toFieldPath: "spec.forProvider.cidrBlocks"
     - base:
