--- a/work/upbound_aurora_crd.yaml
+++ b/work/upbound_aurora_crd.yaml
@@ -32,6 +32,8 @@ spec:
                   type: string
                 vpcId: 
                   type: string
+                port:
+                  type: number
                 cidrBlocks:
                   type: array
                   items: 
