--- a/work/rds.yaml
+++ b/work/rds.yaml
@@ -1,8 +1,9 @@
 apiVersion: aws.database.example.org/v1alpha1
-kind: CrossplaneAuroraPG
+kind: CrossplanePG
 metadata:
-  name: crossplane-aurora-pg
+  name: crossplane-pg
 spec:
+  storageGB: 20
   databaseName: mydb
   subnetIds:
    - subnet-0f4624b991eab373d
@@ -10,17 +11,16 @@ spec:
    - subnet-07daafbc7b27d6383
   region: us-east-2
   vpcId: vpc-011214b27e95562dc
+  port: 5432
   cidrBlocks: 
    - "10.40.0.0/16"
-  engine: aurora-postgresql
-  port: 5432
-  instanceClass: db.serverless
-  maxCapacity: 4
-  minCapacity: 0.5
+  engine: postgres
   engineVersion: "13.7"
-  masterUsername: adminer
-  masterPasswordSecret:  db-creds
-  connectionInfoSecret: db-creds-out-serverless
+  instanceClass: "db.t3.micro"
+  passwordSecret:  db-creds
+  connectionInfoSecret: db-creds-out
   namespace: default
+  storageType: gp2
+  username: adminer
   resourceConfig:
     providerConfigName: default 
