--- a/work/provider-k8s.yaml
+++ b/work/provider-k8s.yaml
@@ -1,6 +1,8 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-   name: provider-kubernetes
+   name: provider-k8s
 spec:
    package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.7.0
+   controllerConfigRef:
+      name: irsa-controllerconfig
