--- a/work/object_mem_secret.yaml
+++ b/work/object_mem_secret.yaml
@@ -1,14 +1,15 @@
 apiVersion: kubernetes.crossplane.io/v1alpha1
 kind: Object
 metadata:
-  name: foobar
+  name: foobar1
 spec:
   forProvider:
     manifest:
       apiVersion: v1
-      data:
+      stringData:
         endpoint: to-be-patched
-      kind: ConfigMap
+      kind: Secret
+      type: Opaque
       metadata:
         namespace: default
   providerConfigRef:
