--- a/apps/production/memorydb-cluster.yaml
+++ b/apps/production/memorydb-cluster.yaml
@@ -1,51 +1,20 @@
-apiVersion: memorydb.services.k8s.aws/v1alpha1
-kind: Cluster
+apiVersion: aws.database.example.org/v1alpha1
+kind: CrossplaneMemoryDB
 metadata:
-  name: "memorydb-cluster"
-  namespace: retailapp
+  name: retailapp-memorydb
 spec:
-  name: "memorydb"
-  nodeType: db.t4g.small
-  aclName: open-access
-  securityGroupIDs:
-    - <vpcSecurityGroupIDs>
-  subnetGroupName: <MemdbSubnetGroupName>
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: memorydb-cluster-conn-cm
+  subnetIds:
+   - <memorydbSubnetId1>
+   - <memorydbSubnetId1>
+   - <memorydbSubnetId1>
+  region: <region>
+  cidrBlocks: 
+   -  "<cidrBlock>"
+  port: 6379
+  instanceClass: "db.t4g.small"
+  connectionInfoSecret: memorydb-cluster-conn-s
+  connectionInfoCM: memorydb-cluster-conn-cm
   namespace: retailapp
-data: {}
----
-apiVersion: services.k8s.aws/v1alpha1
-kind: FieldExport
-metadata:
-  name: memorydb-cluster-host
-  namespace: retailapp
-spec:
-  to:
-    name: memorydb-cluster-conn-cm
-    kind: configmap
-  from:
-    path: ".status.clusterEndpoint.address"
-    resource:
-      group: memorydb.services.k8s.aws
-      kind: Cluster
-      name: memorydb-cluster
----
-apiVersion: services.k8s.aws/v1alpha1
-kind: FieldExport
-metadata:
-  name: memorydb-cluster-port
-  namespace: retailapp
-spec:
-  to:
-    name: memorydb-cluster-conn-cm
-    kind: configmap
-  from:
-    path: ".status.clusterEndpoint.port"
-    resource:
-      group: memorydb.services.k8s.aws
-      kind: Cluster
-      name: memorydb-cluster
+  name: retailapp-memorydb
+  resourceConfig:
+    providerConfigName: provider-aws
