--- a/infrastructure/production/crossplane/crossplane-serviceaccount.yaml
+++ b/infrastructure/production/crossplane/crossplane-serviceaccount.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::380538141740:role/crossplane-controller-role
+    eks.amazonaws.com/role-arn: arn:aws:iam::<account_id>:role/crossplane-controller-role
   name: crossplane-controller-role
   namespace: upbound-system
