--- a/apps/production/kustomization.yaml
+++ b/apps/production/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-#    - ./namespace.yaml
-#    - ./aurora-pg.yaml
-#    - ./memorydb-cluster.yaml
-#    - ./retailapp
+    - ./namespace.yaml
+    - ./db-secret.yaml
+    - ./aurora-pg.yaml
+    - ./memorydb-cluster.yaml
+    - ./retailapp
