--- a/apps/production/db-secret.yaml
+++ b/apps/production/db-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  password: <dbPassword>
-  username: <dbUsername>
+  password: <dbPassword64>
+  username: <dbUsername64>
 kind: Secret
 metadata:
   name: <db-creds>
