--- a/infrastructure/production/crossplane/kustomization.yaml
+++ b/infrastructure/production/crossplane/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: upbound-system
 resources:
-  - namespace.yaml
+  #  - namespace.yaml
   - crossplane-serviceaccount.yaml
   - aurora-crd-composition.yaml
   - memorydb-crd-compsition.yaml
