--- a/infrastructure/production/kustomization.yaml
+++ b/infrastructure/production/kustomization.yaml
@@ -1,5 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-#  - sources #uncomment this line to add HelmRepository
-#  - ack #uncomment this line to add ACK HelmRelease for RDS and MemoryDB controller
+#  - crossplane #uncomment this line to add crossplane compositions
