--- a/infrastructure/production/crossplane/memorydb-crd-composition.yaml
+++ b/infrastructure/production/crossplane/memorydb-crd-composition.yaml
@@ -40,6 +40,8 @@ spec:
                   type: number
                 instanceClass:
                   type: string
+                vpcId:
+                  type: string
                 connectionInfoSecret:
                   type: string
                 connectionInfoCM:
