--- a/apps/production/memorydb-cluster.yaml
+++ b/apps/production/memorydb-cluster.yaml
@@ -20,3 +20,4 @@ spec:
   name: retailapp-memorydb
   resourceConfig:
     providerConfigName: provider-aws
+  k8sResourceConfig: provider-kubernetes
